added an ability for the fish to glow and figured out how to move the fish's image to css to enable hover effects, and designed a 2nd fish with glow on photoshop and inserted it

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 
 	<ul class="navigation">
 		<li data-slide="1">
-		<img class="angler" src="images/angler.png">
-
+			<div class="angler">
+			</div>
 		</li>
-		
 	</ul>
 
 <!--
@@ -42,7 +41,15 @@
 
 
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
-		<img class="fishhead" src="images/fishhead.png">
+		<div class="octodiv"> 
+			<img class="octo" src="images/octo.png">
+		</div> 
+		<div class="fishhead"> 
+			<img class="fish" src="images/fishhead.png">
+		</div> 
+		<div class="DDD">
+			<p>and... build. create. design. </p>
+		</div>
 		<a class="button" data-slide="2" title=""></a>
 	</div>
 					<!--End Slide 1-->
@@ -54,25 +61,29 @@
 	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
 		<div class="wrapper">
 
-			<img class="octoball large" src="images/slide2/octoball-blur.png" data-stellar-ratio="3" data-stellar-vertical-offset="-55"alt="">
+			<img class="whale" src="images/slide2/whale.png" data-stellar-ratio="3" data-stellar-vertical-offset="-55"alt="">
 			<img class ="mountain" src="images/slide2/mountain.png" data-stellar-ratio="1" data-stellar-vertical-offset="-102"alt="">
-			<img src="images/slide2/focus-ball.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
-			<img src="images/slide2/sinyaa.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-25"alt="">
-			<img src="images/slide2/blur-ball.png" data-stellar-ratio="3" data-stellar-vertical-offset="-55"alt="">
-			<img src="images/slide2/blur-ball-big.png" data-stellar-ratio="1" data-stellar-vertical-offset="-102"alt="">
-			<img src="images/slide2/focus-ball.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
-			<img src="images/slide2/small-ball.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-25"alt="">	
+			<img class="opac" src="images/slide2/focus-ball.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
+			<img  src="images/slide2/sinyaa.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-25"alt="">
+			<img class="opac" src="images/slide2/blur-ball.png" data-stellar-ratio="3" data-stellar-vertical-offset="-55"alt="">
+			<img class="desk" src="images/slide2/desk.png" data-stellar-ratio="1" data-stellar-vertical-offset="-102"alt="">
+			<img class="opac" src="images/slide2/focus-ball.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
+			<img class="opac" src="images/slide2/small-ball.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-25"alt="">	
+			<img class="vansdesk" src="images/slide2/vansdesk.png" data-stellar-ratio="2" data-stellar-vertical-offset="-200"alt="">
+
 
 		</div>
 
-		<span class="slideno">Slide 2</span>
+		<span class="slide2text">Design</span>
+
+
 		<a class="button" data-slide="3" title=""></a>
 
-	</div><!--End Slide 2-->
+	</div>
+				<!--End Slide 2-->
 
 
-
-
+				<!-- Slide 3-->
 
 	<div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
 		<div class="wrapper">
@@ -99,7 +110,11 @@
 		
 
 		<span class="slideno">Slide 4</span>
-		<span class="parallaxbg">Use the parallax effects on background images too!</span>
+		<span class="parallaxbg">			
+			<h3>Meow world</h3>
+			<p> a Vandoona  design </p> 
+
+</span>
 
 	</div><!--End Slide 4-->
 
