--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 </head>
 
 <body>
-		<!-- navigation buttons --> 
-	<ul class="navigation">
-		<li data-slide="1">Slide 1</li>
-		<li data-slide="2">Slide 2</li>
-		<li data-slide="3">Slide 3</li>
-		<li data-slide="4">Slide 4</li>
-	</ul>
-
-
+	<!-- navigation buttons --> 
+		<ul> 
+			<ul class="navigation">
+				<ul><div class="shell"></div></ul>
+				<li class="pearl1" data-slide="1"></li>
+				<li class="pearl2" data-slide="2"></li>
+				<li class="pearl3" data-slide="3"></li>
+				<li class="pearl4" data-slide="4"></li>
+			</ul>
+		</ul>
 
 	<ul class="navigation">
 		<li data-slide="1">
@@ -41,8 +42,7 @@
 
 
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
-		<div class="octodiv"> 
-			<img class="octo" src="images/octo.png">
+		<div class=" boat"> 
 		</div> 
 		<div class="fishhead"> 
 			<img class="fish" src="images/fishhead.png">
@@ -50,8 +50,9 @@
 		<div class="DDD">
 			<p>and... build. create. design. </p>
 		</div>
-		
 		<a class="button" data-slide="2" title=""></a>
+
+		
 	</div>
 					<!--End Slide 1-->
 
@@ -65,7 +66,7 @@
 			<img class="whale" src="images/slide2/whale.png" data-stellar-ratio="3" data-stellar-vertical-offset="-55"alt="">
 			<img class ="mountain" src="images/slide2/mountain.png" data-stellar-ratio="1" data-stellar-vertical-offset="-102"alt="">
 			<img class="opac" src="images/slide2/focus-ball.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
-			<img  src="images/slide2/sinyaa.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-25"alt="">
+			<img class="siny"  src="images/slide2/sinyaa.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-25"alt="">
 			<img class="opac" src="images/slide2/blur-ball.png" data-stellar-ratio="3" data-stellar-vertical-offset="-55"alt="">
 			<img class="desk" src="images/slide2/desk.png" data-stellar-ratio="1" data-stellar-vertical-offset="-102"alt="">
 			<img class="opac" src="images/slide2/focus-ball.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
