it took awhile, but added slides in the 3rd section, still ironing it out, found the bugs that prevented bxslides from working, removed jquery 1.7 since it was conflicting with the newer one and creating bugs

--- a/index.html
+++ b/index.html
@@ -7,15 +7,29 @@
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!-- jQuery library (served from Google) -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<!-- bxSlider Javascript file -->
+<script src="js/jquery.bxslider.min.js"></script>
+<!-- bxSlider CSS file -->
+<link href="css/jquery.bxslider.css" rel="stylesheet" />
+
+
+
+
 <script type="text/javascript" src="js/js.js"></script>
 <script type="text/javascript" src="js/stellar.min.js"></script>
 <script type="text/javascript" src="js/waypoints.min.js"></script>
 <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 
+
+
+
 </head>
 
 <body>
+
+
 	<!-- navigation buttons --> 
 		<ul> 
 			<ul class="navigation">
@@ -26,6 +40,7 @@
 				<li class="pearl4" data-slide="4"></li>
 			</ul>
 		</ul>
+
 
 	<ul class="navigation">
 		<li data-slide="1">
@@ -87,21 +102,59 @@
 
 				<!-- Slide 3-->
 
-	<div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
-		<div class="wrapper">
+	<div class="slide" id="slide3" data-slide="3" >
 		
-			<img src="images/slide3/freelance.png" data-stellar-ratio="1.4" data-stellar-vertical-offset="-102"alt="">
-			<img src="images/slide3/psdtuts.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
-			<img src="images/slide3/rockable.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-200"alt="">
-			<img src="images/slide3/themeforest.png" data-stellar-ratio="3" data-stellar-vertical-offset="-200"alt="">
-			<img src="images/slide3/tutshub.png" data-stellar-ratio="1" data-stellar-vertical-offset="-200"alt="">
-			<img src="images/slide3/psdtuts.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-200"alt="">
+			
+			
+
+		<div  class="bxslider pics" >
+  <li><img src="images/shell.png" /></li>
+  <li><img src="images/shellup.png" /></li>
+  <li><img src="images/boat.png" /></li>
+  <li><img src="images/angler.png" /></li>
+</div>
+
+
+
+<div class="pics"> 
+	<div class="pics firstbox"> 
+
+		<ul  class="bxslider" >
+		  <li><img src="images/shell.png" /></li>
+		  <li><img src="images/shellup.png" /></li>
+		  <li><img src="images/boat.png" /></li>
+		  <li><img src="images/angler.png" /></li>
+		</ul>
+	</div>
+
+	<div class="bxslider">
+	  <div class="bxslider-inner">
+	  	<div style="width:80px; height:80px; background:#CCC; padding:5px;">
+	  	</div>
+	  </div>
+	 <div class="bxslider-inner"><div style="width:80px; height:80px; background:#F5F5F5; padding:5px;"></div>
+	</div>
+	<div class="bxslider-inner">
+		<div style="width:80px; height:10px; background:#6699cc; padding:5px;">
 		</div>
+	</div>
+    <div class="bxslider-inner">
+    	<div style="width:80px; height:80px; background:#F5F5F5; padding:5px;">
+    	</div>
+    </div>
+</div>
+  
+</div> 
 
-		<span class="slideno">Slide 3</span>
+
+
+
 		<a class="button" data-slide="4" title=""></a>
+	</div>
 
-	</div><!--End Slide 3-->
+
+
+				<!--End Slide 3-->
 
 
 
@@ -119,12 +172,6 @@
 </span>
 
 	</div><!--End Slide 4-->
-
-
-			
-
-
-
 
 
 
