added photo, stylized shells, aded logo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <body>
 
+<a href="#" class="logo" style="width: 103px;"> 
+      <img src="images/vandoona.png" alt=" logo" style="height: 30.96px; opacity: .9; margin-top: -16.5px;"></a>
 
 	<!-- navigation buttons --> 
 		<ul> 
@@ -102,52 +104,33 @@
 
 				<!-- Slide 3-->
 
-	<div class="slide" id="slide3" data-slide="3" >
+	<div class="slide box " id="slide3" data-slide="3" >
 		
-			
-			
+		<div class="bxslider">
+		  
+		  <div class="bxslider-inner">
+		  	<div class="img1" >
+		  	</div>
+		  </div>
+		  <div class="bxslider-inner">
+		  	<div class="img2" >
+		  	</div>
+		  </div>
+		  <div class="bxslider-inner">
+		  	<div class="img3" >
+		  	</div>
+		  </div>
+		  <div class="bxslider-inner room">
+		  	<div class="img4" >
+		  	</div>
+      			  <span class="opac">Kuta Beach, Bali</span>
+      			</div>
+		  </div>
 
-		<div  class="bxslider pics" >
-  <li><img src="images/shell.png" /></li>
-  <li><img src="images/shellup.png" /></li>
-  <li><img src="images/boat.png" /></li>
-  <li><img src="images/angler.png" /></li>
-</div>
-
-
-
-<div class="pics"> 
-	<div class="pics firstbox"> 
-
-		<ul  class="bxslider" >
-		  <li><img src="images/shell.png" /></li>
-		  <li><img src="images/shellup.png" /></li>
-		  <li><img src="images/boat.png" /></li>
-		  <li><img src="images/angler.png" /></li>
-		</ul>
-	</div>
-
-	<div class="bxslider">
-	  <div class="bxslider-inner">
-	  	<div style="width:80px; height:80px; background:#CCC; padding:5px;">
-	  	</div>
-	  </div>
-	 <div class="bxslider-inner"><div style="width:80px; height:80px; background:#F5F5F5; padding:5px;"></div>
-	</div>
-	<div class="bxslider-inner">
-		<div style="width:80px; height:10px; background:#6699cc; padding:5px;">
-		</div>
-	</div>
-    <div class="bxslider-inner">
-    	<div style="width:80px; height:80px; background:#F5F5F5; padding:5px;">
-    	</div>
-    </div>
-</div>
-  
-</div> 
+	       	
 
 
-
+	    </div>	  
 
 		<a class="button" data-slide="4" title=""></a>
 	</div>
