switched out the code for BXSlider so that it's cleaner

--- a/index.html
+++ b/index.html
@@ -104,37 +104,13 @@
 
 				<!-- Slide 3-->
 
-	<div class="slide box " id="slide3" data-slide="3" >
-		
-		<div class="bxslider">
-		  
-		  <div class="bxslider-inner">
-		  	<div class="img1">
-		  	</div>
-		  </div>
-		  <div class="bxslider-inner">
-		  	<div class="img2" >
-		  	</div>
-		  </div>
-		  <div class="bxslider-inner">
-		  	<div class="img3" >
-		  	</div>
-		  </div>
-		  <div class="bxslider-inner room">
-		  	<div class="img4" >
-		  	</div>
-      		<span class="opac">Kuta Beach, Bali</span>
-      		</div>
-		  </div>
-
-		   <div class="bxslider-inner">
-		   	<div> 
-		  		<img src="images/slide3/boats.png" />
-		  	</div> 
-		  
-		  </div>
 
 
+<ul class="bxslider">
+  <li><img src="images/slide3/beach.png" /></li>
+  <li><img src="images/slide3/boats.png"  title="The long and winding road" /></li>
+  <li><img src="/images/730_200/trees.jpg" title="Happy trees" /></li>
+</ul>
 
 		<a class="button" data-slide="4" title=""></a>
 	</div>
