stylized navigator, edited the photo page and slider

--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,6 @@
 <!-- jQuery library (served from Google) -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <!-- bxSlider Javascript file -->
-<script src="js/jquery.bxslider.min.js"></script>
 <script src="js/jquery.bxslider.js"></script>
 
 <!-- bxSlider CSS file -->
@@ -20,6 +19,8 @@
 
 <script type="text/javascript" src="js/js.js"></script>
 <script type="text/javascript" src="js/stellar.min.js"></script>
+<script type="text/javascript" src="js/waypoints.min.js"></script>
+
 
 
 
@@ -30,12 +31,18 @@
 
 <body>
 <div style="top:50%; left:50%;"> 
+
+
+
 <ul class="bxslider">
-  <li><img src="images/shell.png" /></li>
-  <li><img src="images/shellup.png" /></li>
-  <li><img src="images/boat.png" /></li>
-  <li><img src="images/angler.png" /></li>
+  <li><img src="images/slide3/mt.png" title="Gili Islands, Indonesia" /></li>
+  <li><img src="images/slide3/firewater.png" title="Tonsai and Aoi Nang, southern Thailand" /></li>
+  <li><img src="images/slide3/beach.png" title="Kuta Beach, Bali, Indonesia" /></li>
+  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
 </ul>
+
+
+
 </div>
 </body>
 </html>
