--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- jQuery library (served from Google) -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <!-- bxSlider Javascript file -->
-<script src="js/jquery.bxslider.min.js"></script>
+<script src="js/jquery.bxslider.js"></script>
 <!-- bxSlider CSS file -->
 <link href="css/jquery.bxslider.css" rel="stylesheet" />
 
@@ -42,6 +42,8 @@
 				<li class="pearl4" data-slide="4"></li>
 			</ul>
 		</ul>
+
+
 
 
 	<ul class="navigation">
@@ -103,59 +105,18 @@
 
 
 				<!-- Slide 3-->
-
-
-
+<div>
+<div class="box">
 <ul class="bxslider">
   <li><img src="images/slide3/mt.png" title="Gili Islands, Indonesia" /></li>
   <li><img src="images/slide3/firewater.png" title="Tonsai and Aoi Nang, southern Thailand" /></li>
   <li><img src="images/slide3/beach.png" title="Kuta Beach, Bali, Indonesia" /></li>
   <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
 </ul>
-
-
-
-	<div class="slide box " id="slide3" data-slide="3" >
 		
-		<div class="bxslider">
-		  <li>
-		  <div class="bxslider-inner">
-		  	<div class="img1">
-		  	</div>
-		  </div>
-		</li> 
-	
-		<li>
-		  <div class="bxslider-inner">
-		  	<div class="img2" >
-		  	</div>
-		  </div>
-		</li>
-
-		<li> 
-		  <div class="bxslider-inner">
-		  	<div class="img3" >
-		  	</div>
-		  </div>
-		  </li> 
-
-		<li>
-		  <div class="bxslider-inner room">
-		  	<div class="img4" >
-		  	</div>
-      			<span class="opac">Kuta Beach, Bali
-      			</span>
-      		</div>
-      	</li> 
-
-      		<!-- <img  src="images/slide3/boats.png" />
-	-->
-		  </div>
-
 		<a class="button" data-slide="4" title=""></a>
 	</div>
-
-
+</div>
 
 				<!--End Slide 3-->
 
