--- a/index.html
+++ b/index.html
@@ -105,18 +105,23 @@
 
 
 				<!-- Slide 3-->
-<div>
-<div class="box">
-<ul class="bxslider">
-  <li><img src="images/slide3/mt.png" title="Gili Islands, Indonesia" /></li>
-  <li><img src="images/slide3/firewater.png" title="Tonsai and Aoi Nang, southern Thailand" /></li>
-  <li><img src="images/slide3/beach.png" title="Kuta Beach, Bali, Indonesia" /></li>
-  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
-</ul>
-		
+
+	 
+	 <div>
+	<ul class="bxslider">
+	  <li><img src="images/slide3/mt.png" title="Gili Islands, Indonesia" /></li>
+	  <li><img src="images/slide3/firewater.png" title="Tonsai and Aoi Nang, southern Thailand" /></li>
+	  <li><img src="images/slide3/beach.png" title="Kuta Beach, Bali, Indonesia" /></li>
+	  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
+	</ul>
+
+		<div class="slide box " id="slide3" data-slide="3" >
+
 		<a class="button" data-slide="4" title=""></a>
 	</div>
 </div>
+
+
 
 				<!--End Slide 3-->
 
