fixed the image slider and logo

--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 
 <body>
 
-<a href="#" class="logo" style="width: 103px;"> 
-      <img src="images/vandoona.png" alt=" logo" style="height: 30.96px; opacity: .9; margin-top: -16.5px;"></a>
-
 	<!-- navigation buttons --> 
 		<ul> 
 			<ul class="navigation">
@@ -59,10 +56,16 @@
 	</a>  
 	--> 
 
+<div> 
+
 
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
 		<div class=" boat"> 
 		</div> 
+			<div>
+<a href="#" class="logo" style="width: 103px;"> 
+      <img src="images/vandoona.png" alt=" logo" style="height: 30.96px; opacity: .9; margin-top: -16.5px;"></a>
+</div> 
 		<div class="fishhead"> 
 			<img class="fish" src="images/fishhead.png">
 		</div> 
@@ -73,6 +76,8 @@
 
 		
 	</div>
+
+</div>
 					<!--End Slide 1-->
 
 
@@ -106,20 +111,17 @@
 
 				<!-- Slide 3-->
 
-	 
+	 <div class="slide box " id="3" data-slide="3" >
 	 <div>
-	<ul class="bxslider">
-	  <li><img src="images/slide3/mt.png" title="Gili Islands, Indonesia" /></li>
-	  <li><img src="images/slide3/firewater.png" title="Tonsai and Aoi Nang, southern Thailand" /></li>
-	  <li><img src="images/slide3/beach.png" title="Kuta Beach, Bali, Indonesia" /></li>
-	  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
-	</ul>
-
-		<div class="slide box " id="slide3" data-slide="3" >
-
+		<ul class="bxslider">
+		  <li><img src="images/slide3/mt.png" title="Gili Islands, Indonesia" /></li>
+		  <li><img src="images/slide3/firewater.png" title="Tonsai and Aoi Nang, southern Thailand" /></li>
+		  <li><img src="images/slide3/beach.png" title="Kuta Beach, Bali, Indonesia" /></li>
+		  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
+		</ul>
+	</div>
 		<a class="button" data-slide="4" title=""></a>
 	</div>
-</div>
 
 
 
