added font, cleaned up the old one, redid the text, stylized, and adjusted the div, started on the final section

--- a/index.html
+++ b/index.html
@@ -56,28 +56,24 @@
 	</a>  
 	--> 
 
-<div> 
 
 
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
 		<div class=" boat"> 
 		</div> 
+		<div class="fishhead"> 
+			<img class="fish" src="images/fishhead.png">
+		</div> 
 			<div>
 <a href="#" class="logo" style="width: 103px;"> 
       <img src="images/vandoona.png" alt=" logo" style="height: 30.96px; opacity: .9; margin-top: -16.5px;"></a>
 </div> 
-		<div class="fishhead"> 
-			<img class="fish" src="images/fishhead.png">
-		</div> 
-		<div class="DDD">
-			<p>and... build. create. design. </p>
+		<div class="font">
+			<p>create </p>
 		</div>
 		<a class="button" data-slide="2" title=""></a>
-
 		
 	</div>
-
-</div>
 					<!--End Slide 1-->
 
 
@@ -100,7 +96,7 @@
 
 		</div>
 
-		<span class="slide2text">Design</span>
+		<span class="font2">and build... </span>
 
 
 		<a class="button" data-slide="3" title=""></a>
@@ -120,6 +116,9 @@
 		  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
 		</ul>
 	</div>
+		<div class="font3"> 
+			and design. 
+		</div>
 		<a class="button" data-slide="4" title=""></a>
 	</div>
 
@@ -133,16 +132,27 @@
 
 
 	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
-		
 
-		<span class="slideno">Slide 4</span>
-		<span class="parallaxbg">			
-			<h3>Meow world</h3>
-			<p> a Vandoona  design </p> 
+		<div class="bottom">
 
-</span>
+			<div class="columns">
+			    <div class="red" >Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. 
+			    </div>
+			    <div class="grey">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. 
+			    </div>
+			    <div class="red">
+			    Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. </div>
+			</div>
+			<div class="clear">
+			</div>	
 
-	</div><!--End Slide 4-->
+			<span class="slideno">Slide 4
+				Meow world
+				a Vandoona  design 
+			</span>
+
+		</div><!--End Slide 4-->
+	</div>
 
 
 
