added content to the last section, created 4 columns, and cleaning up

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 			<img class="opac" src="images/slide2/focus-ball.png" data-stellar-ratio="1.5" data-stellar-vertical-offset="-53"alt="">
 			<img class="opac" src="images/slide2/small-ball.png" data-stellar-ratio="2.7" data-stellar-vertical-offset="-25"alt="">	
 			<img class="vansdesk" src="images/slide2/vansdesk.png" data-stellar-ratio="2" data-stellar-vertical-offset="-200"alt="">
+			<img class="opac" src="images/slide2/blur-ball.png" data-stellar-ratio="3" data-stellar-vertical-offset="-42"alt="">
+			<img class="opac" src="images/slide2/blur-ball.png" data-stellar-ratio="3" data-stellar-vertical-offset="-45"alt="">
 
 
 		</div>
@@ -133,15 +135,49 @@
 
 	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
 
-		<div class="bottom">
+		<div class="info">
 
 			<div class="columns">
-			    <div class="red" >Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. 
+			    <div class="red"><h3>About Me </h3> <br> When I code and design, 
+			    <br>flow happens. A good book, 
+			    <br>site, or app flows well, 
+			    <br>and this is what I aim for. 
+			    <br><br>Flow.
 			    </div>
-			    <div class="grey">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. 
+			    <div class="grey"><h3>Briefcase </h3><br>
+			    an economics degree<br> 
+			    Ruby on Rails, HTML, 
+			    <br>CSS, JS, Python, 
+			    <br>Illustrator, Photoshop, wireframing, flat ui design,
+			    <br>pencils, pens, & pixels.  
+
 			    </div>
-			    <div class="red">
-			    Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. </div>
+			    <div class="red"><h3>Interests</h3><br>
+			    ukulele <br>
+			    climbing and camping<br>
+			    music<br> 
+				art, especially watercolor<br>
+				books<br>
+				pushing stuff to Git <br>
+				Ted Talks<br> 
+				and so much more. 
+
+
+				</div>
+			     <div class="grey"><h3>Projects</h3><br>
+			     past ~ interactive social restaurant guide (rails), 
+			     <br>e-commerce site (rails),
+			     <br>flat ui design, stocks and 
+			     <br>website scrapper (Python), parallax sites (js), 
+			     <br>and more. 
+			   	 <br><br>
+			     future projects ~ twitter 
+			     <br>scrapper and aggregator, infographs, data 
+			     <br>representations with open gov data (D3JS), iOS apps, 
+			     <br>and more. 
+
+			    </div>
+
 			</div>
 			<div class="clear">
 			</div>	
