figured out the awesome font bug, missing the css, stylizing the final section, adding icons and footer

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
 <!-- jQuery library (served from Google) -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <!-- bxSlider Javascript file -->
 <script src="js/jquery.bxslider.js"></script>
 <!-- bxSlider CSS file -->
 <link href="css/jquery.bxslider.css" rel="stylesheet" />
-
 
 
 
@@ -28,7 +29,6 @@
 </head>
 
 <body>
-
 	<!-- navigation buttons --> 
 		<ul> 
 			<ul class="navigation">
@@ -39,8 +39,6 @@
 				<li class="pearl4" data-slide="4"></li>
 			</ul>
 		</ul>
-
-
 
 
 	<ul class="navigation">
@@ -133,7 +131,7 @@
 
 
 
-	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
+	<div class="slide info" id="slide4" data-slide="4" data-stellar-background-ratio="0">
 
 		<div class="info">
 
@@ -143,20 +141,32 @@
 			    <br>site, or app flows well, 
 			    <br>and this is what I aim for. 
 			    <br><br>Flow.
+			    <br><br>
+			    ~Van Doan 
 			    </div>
+
+
 			    <div class="grey"><h3>Briefcase </h3><br>
 			    an economics degree<br> 
 			    Ruby on Rails, HTML, 
 			    <br>CSS, JS, Python, 
 			    <br>Illustrator, Photoshop, wireframing, flat ui design,
-			    <br>pencils, pens, & pixels.  
+			    <br>pencils, pens, & pixels. 
+			    <br> <br> 
+			    watercolor, angular js, 
+			    <br>php, acrylic paint, 
+			    <br>charcoal, sass, haml
+			    <br> iOS development 
+
+
 
 			    </div>
 			    <div class="red"><h3>Interests</h3><br>
 			    ukulele <br>
 			    climbing and camping<br>
 			    music<br> 
-				art, especially watercolor<br>
+				art<br> 
+				watercolor<br>
 				books<br>
 				pushing stuff to Git <br>
 				Ted Talks<br> 
@@ -177,18 +187,22 @@
 			     <br>and more. 
 
 			    </div>
+			</div>
+		</div>
+			    <div> 
+			</div> 
+			<div class="icons"> 
+			<i class="fa fa-github fa-2x"></i>
 
 			</div>
-			<div class="clear">
+			<div class="footer">
+				<h1> Meow World </h1>
+
 			</div>	
 
-			<span class="slideno">Slide 4
-				Meow world
-				a Vandoona  design 
-			</span>
+
 
 		</div><!--End Slide 4-->
-	</div>
 
 
 
