improved the columns on the final section, fixed the icon placement, and adjusted the footer

--- a/index.html
+++ b/index.html
@@ -117,8 +117,11 @@
 		</ul>
 	</div>
 		<div class="font3"> 
-			and design. 
+			and design  
 		</div>
+		<div class="world">
+			inspired by the world.
+		</div> 
 		<a class="button" data-slide="4" title=""></a>
 	</div>
 
@@ -136,10 +139,11 @@
 		<div class="info">
 
 			<div class="columns">
-			    <div class="red"><h3>About Me </h3> <br> When I code and design, 
-			    <br>flow happens. A good book, 
-			    <br>site, or app flows well, 
-			    <br>and this is what I aim for. 
+			    <div class="red"><h3>About Me </h3> <br>A good book, 
+			    <br>painting, site, 
+			    <br>or app flows well, 
+			    <br>and this is 
+			    what I aim for. 
 			    <br><br>Flow.
 			    <br><br>
 			    ~Van Doan 
@@ -151,8 +155,10 @@
 			    Ruby on Rails, HTML, 
 			    <br>CSS, JS, Python, 
 			    <br>Illustrator, Photoshop, wireframing, flat ui design,
-			    <br>pencils, pens, & pixels. 
-			    <br> <br> 
+
+			    <br><br>pencils, pens, & pixels. 
+			    <br> <br>
+			    a bit of<br>  
 			    watercolor, angular js, 
 			    <br>php, acrylic paint, 
 			    <br>charcoal, sass, haml
@@ -171,39 +177,61 @@
 				pushing stuff to Git <br>
 				Ted Talks<br> 
 				and so much more. 
-
-
 				</div>
-			     <div class="grey"><h3>Projects</h3><br>
-			     past ~ interactive social restaurant guide (rails), 
-			     <br>e-commerce site (rails),
-			     <br>flat ui design, stocks and 
-			     <br>website scrapper (Python), parallax sites (js), 
-			     <br>and more. 
-			   	 <br><br>
-			     future projects ~ twitter 
-			     <br>scrapper and aggregator, infographs, data 
-			     <br>representations with open gov data (D3JS), iOS apps, 
-			     <br>and more. 
 
-			    </div>
+			     <div class="grey"><h3>Past Projects</h3><br>
+			     <h2>Past</h2>interactive social 
+			     <br>restaurant guide 
+			     <br>(rails), e-commerce 
+			     <br>site (rails),
+			     flat ui 
+			     design, <br>stocks and 
+			     website <br>scrapper 
+			     (Python), 
+			     <br>parallax 
+			     sites (js), 
+			     and <br>more. 
+			   	 <br><br>
+			   	</div>
+
+			   	<div>
+			   		<h3>Future ones</h3>
+			   		<br>
+				     twitter scrapper 
+				     <br>and aggregator, 
+				     <br>infographs, data 
+				     representations 
+				     <br>with open gov data 
+				     <br>(D3JS), iOS apps, 
+				     <br>and more. 
+				</div>
 			</div>
 		</div>
 			    <div> 
 			</div> 
-			<div class="icons"> 
-			<i class="fa fa-github fa-2x"></i>
 
+			<div class="icons"> 
+				<div > 
+					<center>
+						<div class="innerIcon">
+							<div><i class="fa fa-github fa-2x"></i>
+							<i class="fa fa-linkedin fa-2x"></i>
+							</div>
+						</div>
+					</center>
+				</div> 
 			</div>
 			<div class="footer">
-				<h1> Meow World </h1>
+				<div class="innerfooter"> 
+					<div><h3> Meow World </h3></div>
 
+					<div class="cat"> <i class="fa fa-github-alt fa-2x"></i></div>
+				</div>
 			</div>	
 
 
 
 		</div><!--End Slide 4-->
-
 
 
 
