removed discarded items from git, created a hover effect that shows info about the creator, added font

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 </head>
 
+
 <body>
 	<!-- navigation buttons --> 
 		<ul> 
@@ -57,14 +58,31 @@
 
 
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
+		
 		<div class=" boat"> 
 		</div> 
 		<div class="fishhead"> 
 			<img class="fish" src="images/fishhead.png">
 		</div> 
 			<div>
+
 <a href="#" class="logo" style="width: 103px;"> 
-      <img src="images/vandoona.png" alt=" logo" style="height: 30.96px; opacity: .9; margin-top: -16.5px;"></a>
+
+      <img src="images/vandoona.png" alt=" logo" style="height: 30.96px; opacity: .9; margin-top: -16.5px;">
+      <div class="me2">
+			<div class="meText"> 
+				<center>
+				<img src ="images/me.png" />
+				Van Doan 
+				<br>
+				<br>full stack 
+				<br>developer<br>
+				<br>Floridian 
+				<br>in Brooklyn
+				<center> 
+			</div>
+		</div>
+	</a>
 </div> 
 		<div class="font">
 			<p>create </p>
@@ -139,71 +157,94 @@
 		<div class="info">
 
 			<div class="columns">
-			    <div class="red"><h3>About Me </h3> <br>A good book, 
-			    <br>painting, site, 
-			    <br>or app flows well, 
+			    <div class="red"><h3>About Me </h3> <br>a good book, 
+			    <br>site, 
+			    or app 
+			    <br>flows well, 
 			    <br>and this is 
-			    what I aim for. 
+			    <br>what 
+			    I aim for. 
 			    <br><br>Flow.
-			    <br><br>
-			    ~Van Doan 
 			    </div>
 
 
 			    <div class="grey"><h3>Briefcase </h3><br>
-			    an economics degree<br> 
-			    Ruby on Rails, HTML, 
-			    <br>CSS, JS, Python, 
-			    <br>Illustrator, Photoshop, wireframing, flat ui design,
+			    an econ 
+			    degree, 
+			    <br>Ruby 
+			    on Rails, 
+			    <br>HTML, 
+			    CSS, 
+			    JS, 
+			    <br>Python, 
+			    Illustrator, 
+			    <br>Photoshop, 
+			    <br>wireframing, 
+			    flat 
+			    <br>ui design,
 
-			    <br><br>pencils, pens, & pixels. 
+			    pencils, 
+			    <br>pens, & pixels. 
 			    <br> <br>
-			    a bit of<br>  
-			    watercolor, angular js, 
-			    <br>php, acrylic paint, 
-			    <br>charcoal, sass, haml
-			    <br> iOS development 
+			    A bit of<br>  
+			    Angular js, 
+			    php, 
+			    <br>acrylic paint, 
+			    sass, 
+			    <br>haml, and 
+			    iOS 
 
 
 
 			    </div>
 			    <div class="red"><h3>Interests</h3><br>
 			    ukulele <br>
-			    climbing and camping<br>
+			    climbing<br>
+			    camping<br>
+			    coding<br>
 			    music<br> 
 				art<br> 
+				biking<br>
 				watercolor<br>
 				books<br>
 				pushing stuff to Git <br>
-				Ted Talks<br> 
+				learning new stuff<br> 
 				and so much more. 
 				</div>
 
 			     <div class="grey"><h3>Past Projects</h3><br>
-			     <h2>Past</h2>interactive social 
+			     interactive social 
 			     <br>restaurant guide 
 			     <br>(rails), e-commerce 
 			     <br>site (rails),
-			     flat ui 
-			     design, <br>stocks and 
+			     flat <br>ui 
+			     design, stocks<br> and 
 			     website <br>scrapper 
-			     (Python), 
+			     <br>(Python), 
 			     <br>parallax 
-			     sites (js), 
-			     and <br>more. 
+			     <br>sites (js), 
+			     <br>and more. 
 			   	 <br><br>
 			   	</div>
 
 			   	<div>
 			   		<h3>Future ones</h3>
 			   		<br>
-				     twitter scrapper 
+				     twitter 
+				     <br>scrapper 
 				     <br>and aggregator, 
-				     <br>infographs, data 
+				     <br>infographs, 
+				     data 
 				     representations 
-				     <br>with open gov data 
-				     <br>(D3JS), iOS apps, 
-				     <br>and more. 
+				     <br>with open gov 
+				     <br>data 
+				     (D3JS), 
+				     <br>iOS 
+				     apps, 
+				     and 
+				     <br>so 
+				     much 
+				     <br>more. 
 				</div>
 			</div>
 		</div>
@@ -214,8 +255,15 @@
 				<div > 
 					<center>
 						<div class="innerIcon">
-							<div><i class="fa fa-github fa-2x"></i>
+							<div>
+							<i class="fa fa-github fa-2x"></i>
 							<i class="fa fa-linkedin fa-2x"></i>
+							<i class="fa fa-twitter fa-2x"></i>
+							<i class="fa fa-envelope-o"></i>
+							</div>
+							<div class="sign">
+								crafted
+								by vanDoan
 							</div>
 						</div>
 					</center>
