almost ready for deploy, added additional photos which where trimmed and edited in photoshop, minor editing to the text on the last section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
 
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
-		
 		<div class=" boat"> 
 		</div> 
 		<div class="fishhead"> 
@@ -76,7 +75,7 @@
 				Van Doan 
 				<br>
 				<br>full stack 
-				<br>developer<br>
+				<br>developer<br>~
 				<br>Floridian 
 				<br>in Brooklyn
 				<center> 
@@ -126,12 +125,17 @@
 				<!-- Slide 3-->
 
 	 <div class="slide box " id="3" data-slide="3" >
-	 <div>
+	 <div class="photo">
 		<ul class="bxslider">
 		  <li><img src="images/slide3/mt.png" title="Gili Islands, Indonesia" /></li>
 		  <li><img src="images/slide3/firewater.png" title="Tonsai and Aoi Nang, southern Thailand" /></li>
 		  <li><img src="images/slide3/beach.png" title="Kuta Beach, Bali, Indonesia" /></li>
 		  <li><img src="images/slide3/boats.png"  title="Gili Islands, Indonesia" /></li>
+
+		  <li><img src="images/slide3/flame.png" title="Kuala Lumpur, Malaysia" /></li>
+		  <li><img src="images/slide3/island.png" title="Borneo, Malaysia" /></li>
+		  <li><img src="images/slide3/kkForest.png" title="Kota Kinabalu Mt., Sabah, , East Malysia" /></li>
+		  <li><img src="images/slide3/mizu.png"  title="Mizu, Washington, D.C." /></li>
 		</ul>
 	</div>
 		<div class="font3"> 
@@ -157,7 +161,7 @@
 		<div class="info">
 
 			<div class="columns">
-			    <div class="red"><h3>About Me </h3> <br>a good book, 
+			    <div class="red"><h3>About Me </h3> <br>A good book, 
 			    <br>site, 
 			    or app 
 			    <br>flows well, 
@@ -169,16 +173,16 @@
 
 
 			    <div class="grey"><h3>Briefcase </h3><br>
-			    an econ 
-			    degree, 
+			    An econ 
+			    degree 
 			    <br>Ruby 
-			    on Rails, 
+			    on Rails 
 			    <br>HTML, 
 			    CSS, 
-			    JS, 
+			    JS 
 			    <br>Python, 
-			    Illustrator, 
-			    <br>Photoshop, 
+			    Illustrator 
+			    <br>Photoshop, Nikon D90 
 			    <br>wireframing, 
 			    flat 
 			    <br>ui design,
@@ -188,9 +192,9 @@
 			    <br> <br>
 			    A bit of<br>  
 			    Angular js, 
-			    php, 
+			    php 
 			    <br>acrylic paint, 
-			    sass, 
+			    sass 
 			    <br>haml, and 
 			    iOS 
 
@@ -205,15 +209,16 @@
 			    music<br> 
 				art<br> 
 				biking<br>
+				photography<br>
 				watercolor<br>
 				books<br>
-				pushing stuff to Git <br>
-				learning new stuff<br> 
+				pushing to Git <br>
+				learning<br> 
 				and so much more. 
 				</div>
 
 			     <div class="grey"><h3>Past Projects</h3><br>
-			     interactive social 
+			     Interactive social 
 			     <br>restaurant guide 
 			     <br>(rails), e-commerce 
 			     <br>site (rails),
@@ -230,15 +235,15 @@
 			   	<div>
 			   		<h3>Future ones</h3>
 			   		<br>
-				     twitter 
+				     Twitter 
 				     <br>scrapper 
-				     <br>and aggregator, 
+				     <br>and aggregator 
 				     <br>infographs, 
 				     data 
 				     representations 
 				     <br>with open gov 
 				     <br>data 
-				     (D3JS), 
+				     (D3JS)
 				     <br>iOS 
 				     apps, 
 				     and 
@@ -256,10 +261,16 @@
 					<center>
 						<div class="innerIcon">
 							<div>
-							<i class="fa fa-github fa-2x"></i>
-							<i class="fa fa-linkedin fa-2x"></i>
-							<i class="fa fa-twitter fa-2x"></i>
-							<i class="fa fa-envelope-o"></i>
+								<a href="https://github.com/vandoan">
+									<i class="fa fa-github fa-2x"></i></a>
+								<a href="https://www.linkedin.com/pub/van-doan/90/a55/126">
+									<i class="fa fa-linkedin"></i>
+								</a>
+								<a href="https://twitter.com/">
+									<i class="fa fa-twitter" ></i>
+								</a>
+								<a href="mailto:spoonbbill@gmail.com"><i class="fa fa-envelope-o">
+								</i></a>
 							</div>
 							<div class="sign">
 								crafted
